# api/manager.v1.swagger.yml
@@ -10,13 +10,43 @@ servers:
     description: Development e2e server
 
 paths:
+  /getChats:
+    post:
+      description: Get the list of chats with open problems.
+      parameters:
+        - $ref: "#/components/parameters/XRequestIDHeader"
+      responses:
+        '200':
+          description: Chats list.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetChatsResponse"
+
+  /getChatHistory:
+    post:
+      description: Get chat history.
+      parameters:
+        - $ref: "#/components/parameters/XRequestIDHeader"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/GetChatHistoryRequest"
+      responses:
+        '200':
+          description: Messages list.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetChatHistoryResponse"
+
   /getFreeHandsBtnAvailability:
     post:
       description: Get availability to handle new problems.
       parameters:
         - $ref: '#/components/parameters/XRequestIDHeader'
-      requestBody:
-        required: false
       responses:
         '200':
           description: Availability result
@@ -30,8 +60,6 @@ paths:
       description: Declare readiness to handle problems.
       parameters:
         - $ref: '#/components/parameters/XRequestIDHeader'
-      requestBody:
-        required: false
       responses:
         '200':
           description: Declaration sent
@@ -83,6 +111,103 @@ components:
         - 5000
       x-enum-varnames:
         - ErrorCodeManagerOverloadedError
+
+    ChatId:
+      required: [ chatId ]
+      properties:
+        chatId:
+          type: string
+          format: uuid
+          x-go-type: types.ChatID
+          x-go-type-import:
+            path: "github.com/ekhvalov/bank-chat-service/internal/types"
+
+    # /getChats
+
+    GetChatsResponse:
+      properties:
+        data:
+          $ref: "#/components/schemas/ChatList"
+        error:
+          $ref: "#/components/schemas/Error"
+
+    ChatList:
+      required: [ chats ]
+      properties:
+        chats:
+          type: array
+          items: { $ref: "#/components/schemas/Chat" }
+
+    Chat:
+      allOf:
+        - $ref: "#/components/schemas/ChatId"
+        - type: object
+          required: [ clientId ]
+          properties:
+            clientId:
+              type: string
+              format: uuid
+              x-go-type: types.UserID
+              x-go-type-import:
+                path: "github.com/ekhvalov/bank-chat-service/internal/types"
+
+    # /getChatHistory
+
+    GetChatHistoryRequest:
+      required: [ chatId ]
+      properties:
+        chatId:
+          type: string
+          format: uuid
+          x-go-type: types.ChatID
+          x-go-type-import:
+            path: "github.com/ekhvalov/bank-chat-service/internal/types"
+        pageSize:
+          type: integer
+          minimum: 10
+          maximum: 100
+        cursor:
+          type: string
+
+
+    GetChatHistoryResponse:
+      properties:
+        data:
+          $ref: "#/components/schemas/MessagesPage"
+        error:
+          $ref: "#/components/schemas/Error"
+
+    MessagesPage:
+      required: [ messages, next ]
+      properties:
+        messages:
+          type: array
+          items: { $ref: "#/components/schemas/Message" }
+        next:
+          type: string
+
+    Message:
+      required: [ id, authorId, body, createdAt, isReceived ]
+      properties:
+        id:
+          type: string
+          format: uuid
+          x-go-type: types.MessageID
+          x-go-type-import:
+            path: "github.com/ekhvalov/bank-chat-service/internal/types"
+        authorId:
+          type: string
+          format: uuid
+          x-go-type: types.UserID
+          x-go-type-import:
+            path: "github.com/ekhvalov/bank-chat-service/internal/types"
+        body:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        isReceived:
+          type: boolean
 
     # /getFreeHandsBtnAvailability
 
