# internal/repositories/chats/api.go
@@ -6,6 +6,8 @@ import (
 
 	"entgo.io/ent/dialect/sql"
 
+	"github.com/ekhvalov/bank-chat-service/internal/store/gen/chat"
+	"github.com/ekhvalov/bank-chat-service/internal/store/gen/problem"
 	"github.com/ekhvalov/bank-chat-service/internal/types"
 )
 
@@ -22,4 +24,24 @@ func (r *Repo) CreateIfNotExists(ctx context.Context, userID types.UserID) (type
 		return types.ChatIDNil, fmt.Errorf("create chat: %v", err)
 	}
 	return id, nil
+}
+
+func (r *Repo) GetOpenProblemChatsForManager(ctx context.Context, managerID types.UserID) ([]Chat, error) {
+	chats, err := r.db.Chat(ctx).Query().
+		Where(
+			chat.HasProblemsWith(
+				problem.ManagerID(managerID),
+				problem.ResolvedAtIsNil(),
+			),
+		).
+		Order(chat.ByCreatedAt(sql.OrderDesc())).
+		All(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("query chats: %v", err)
+	}
+	// if len(chats) == 0 {
+	// 	return nil, ErrChatsNotFound
+	// }
+
+	return adaptStoreChats(chats), nil
 }
