# internal/repositories/problems/api.go
@@ -5,9 +5,12 @@ import (
 	"fmt"
 
 	store "github.com/ekhvalov/bank-chat-service/internal/store/gen"
+	"github.com/ekhvalov/bank-chat-service/internal/store/gen/chat"
+	"github.com/ekhvalov/bank-chat-service/internal/store/gen/message"
 	"github.com/ekhvalov/bank-chat-service/internal/store/gen/predicate"
 	"github.com/ekhvalov/bank-chat-service/internal/store/gen/problem"
 	"github.com/ekhvalov/bank-chat-service/internal/types"
+	"github.com/ekhvalov/bank-chat-service/pkg/pointer"
 )
 
 func (r *Repo) CreateIfNotExists(ctx context.Context, chatID types.ChatID) (types.ProblemID, error) {
@@ -34,4 +37,35 @@ func (r *Repo) CountManagerOpenProblems(ctx context.Context, managerID types.Use
 		return 0, fmt.Errorf("count: %v", err)
 	}
 	return count, nil
+}
+
+func (r *Repo) GetProblemByMessageID(ctx context.Context, messageID types.MessageID) (*Problem, error) {
+	p, err := r.db.Problem(ctx).Query().Where(problem.HasMessagesWith(message.ID(messageID))).First(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("get problem: %v", err)
+	}
+	if nil == p {
+		return nil, ErrProblemNotFound
+	}
+
+	return pointer.Ptr(adaptStoreProblem(p)), nil
+}
+
+func (r *Repo) GetUnresolvedProblem(ctx context.Context, chatID types.ChatID, managerID types.UserID) (*Problem, error) {
+	p, err := r.db.Problem(ctx).
+		Query().
+		Where(
+			problem.HasChatWith(chat.ID(chatID)),
+			problem.ManagerID(managerID),
+			problem.ResolvedAtIsNil(),
+		).
+		First(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("get problem: %v", err)
+	}
+	if nil == p {
+		return nil, ErrProblemNotFound
+	}
+
+	return pointer.Ptr(adaptStoreProblem(p)), nil
 }
